Revision history for ipgrep

v0.5.1
  [Tests]
  - Added tests for gzipped files.

v0.5.0    2023-11-08 21:16:30 Europe/London
  [Enhancements]
  - Added --exclude-final-dot option.

  - Added --only-matching option, GH#7.

  - Added --label option, GH#8.

v0.4.3    2023-11-08 13:15:30 Europe/London
  [Documentation]
  - Fixed grammar in the Changes.

  - Added grepcidr to SEE ALSO.

  - Fixed link for GNU grep in SEE ALSO.

  [Toolchain]
  - Added LICENSE to the MANIFEST.

  - Added MANIFEST.SKIP.

  - Added missing metadata to Makefile.PL.

v0.4.2    2023-11-07 19:23:30 Europe/London
  [Documentation]
  - Added links to git repository and bug tracker.

  [Tests]
  - Added missing data files to the MANIFEST.

v0.4.1    2023-11-07 16:51:30 Europe/London
  [Bug Fixes]
  - Fixed typo in Makefile.PL.

v0.4.0    2023-11-07 16:48:30 Europe/London
  [Enhancements]
  - Added Makefile.PL to enable easier build and installation.

  [Documentation]
  - Fixed copyright year in the LICENSE.

  - Fixed typo in Changes.

  [Other]
  - Changed shebang line of script to be ExtUtils::MakeMaker-friendly.

v0.3.0    2023-11-06 13:17:30 Europe/London
  [Enhancements]
  - Use NetAddr::IP to generate the regular expressions for specific netblocks. This implicitly adds support for IP6
    addresses (GH#1). Thanks andrew@cpan.org.

  [Tests]
  - Add more tests.

v0.2.3    2023-11-05 18:07:30 Europe/London
  [Documentation]
  - Update README from POD changes in v0.2.1.

v0.2.2    2023-11-05 18:03:30 Europe/London
  [Bug Fixes]
  - The --version option exits properly.

v0.2.1    2023-11-05 17:58:30 Europe/London
  [Documentation]
  - Explicitly note that this only matches dotted decimal IP4 addresses.

  [Tests]
  - Added tests.

v0.2.0   2023-11-04 16:52:30 Europe/London
  [Enhancements]
  - Returns exit code of 0 if there is a match, 1 if no match.

  - Add support for the --quiet option (GH#2).

v0.1.1   2023-11-02 22:42:15 Europe/London
  [Documentation]
  - Added missing Changes.
